deployments/k8s/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:latest
          ports:
            - containerPort: 4317
              protocol: TCP
            - containerPort: 4318
              protocol: TCP
            - containerPort: 16686
              protocol: TCP
            - containerPort: 14268
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
spec:
  selector:
    app: jaeger
  ports:
    - name: grpc
      port: 4317
      targetPort: 4317
      protocol: TCP
    - name: http
      port: 4318
      targetPort: 4318
      protocol: TCP
    - name: ui
      port: 16686
      targetPort: 16686
      protocol: TCP
    - name: collector
      port: 14268
      targetPort: 14268
      protocol: TCP
  type: ClusterIP
