deployments/k8s/lsevin-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lsevin-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lsevin-api
  template:
    metadata:
      labels:
        app: lsevin-api
    spec:
      containers:
        - name: lsevin-api
          image: pouryanf/lsevin-api:latest
          ports:
            - containerPort: 80
            - containerPort: 443
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: lsevin-api
spec:
  selector:
    app: lsevin-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: ClusterIP
