deployments/k8s/lsevin-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lsevin-apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lsevin-apigateway
  template:
    metadata:
      labels:
        app: lsevin-apigateway
    spec:
      containers:
        - name: lsevin-apigateway
          image: pouryanf/lsevin-gateway:latest
          ports:
            - containerPort: 80
            - containerPort: 443
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: lsevin-apigateway
spec:
  selector:
    app: lsevin-apigateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lsevin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lsevin-apigateway
                port:
                  number: 80
